removed href from a tag

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			Your browser isn't invited for super fun time.
 		</audio>
 
-		<a id="rimshot-hover-sound" class="bucks-face" href="#"></a>
+		<a id="rimshot-hover-sound" class="bucks-face"></a>
 	</div>
 </body>
 
