--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 			width: 600px;
 			background-image: url('images/toronto-blue-jays-mono.png');
 			background-size: cover;
-			transition: all 0.3s ease-in-out;
+			transition: all 0.3s cubic-bezier(0.83, 0, 0.17, 1);
 		}
 
 		.bucks-face:hover {
 			transform: scale(1.1);
-			transition: all 0.3s ease-in-out;
+			transition: all 0.3s cubic-bezier(0.83, 0, 0.17, 1);
 			background-image: url('images/toronto-blue-jays.png');
 		}
 
 		.bucks-face:active {
 			transform: scale(1.05);
-			transition: all 0.2s ease-in-out;
+			transition: all 0.2s cubic-bezier(0.83, 0, 0.17, 1);
 		}
 	</style>
 
