class name update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			margin: 0 auto;
 		}
 
-		.bucks-face {
+		.jays-logo {
 			height: 600px;
 			width: 600px;
 			background-image: url('images/toronto-blue-jays-mono.png');
@@ -37,13 +37,13 @@
 			transition: all 0.3s cubic-bezier(0.83, 0, 0.17, 1);
 		}
 
-		.bucks-face:hover {
+		.jays-logo:hover {
 			transform: scale(1.1);
 			transition: all 0.3s cubic-bezier(0.83, 0, 0.17, 1);
 			background-image: url('images/toronto-blue-jays.png');
 		}
 
-		.bucks-face:active {
+		.jays-logo:active {
 			transform: scale(1.05);
 			transition: all 0.2s cubic-bezier(0.83, 0, 0.17, 1);
 		}
@@ -58,7 +58,7 @@
 			Your browser isn't invited for super fun time.
 		</audio>
 
-		<a id="swing-hover" class="bucks-face"></a>
+		<a id="swing-hover" class="jays-logo"></a>
 	</div>
 </body>
 
